--- a/examples/example-page-as-container.html
+++ b/examples/example-page-as-container.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-1.css">
 </head>
 
 <body>
@@ -38,8 +38,8 @@
     function scrollHandle () {
       // myScroller.scrollToY(100,1000);
       let element = document.querySelector('.list-4');
-      // myScroller.scrollToElem(element, 1000);
-      myScroller.scrollToCenterOf(element, 1000, 0);
+      myScroller.scrollToElem(element, 1000);
+      // myScroller.scrollToCenterOf(element, 1000, 0);
     }
   </script>
 </body>
