jumper.js, rollup config

--- a/examples/scroll-1-examples/example-1-page-as-container.html
+++ b/examples/scroll-1-examples/example-1-page-as-container.html
@@ -30,7 +30,7 @@
 
   <button onclick="scrollHandle()">Click To Scroll</button>
 
-  <script src="../my-scroller.js"></script>
+  <script src="../../scroller-1-zenscroll/my-scroller.js"></script>
 
   <script>
     let myScroller = new MyScroller();
