--- a/examples/scroll-1-examples/example-2-customized-container.html
+++ b/examples/scroll-1-examples/example-2-customized-container.html
@@ -32,7 +32,7 @@
 
   <button onclick="scrollHandle()">Click To Scroll</button>
 
-  <script src="../my-scroller.js"></script>
+  <script src="../../scroller-1-zenscroll/my-scroller.js"></script>
 
   <script>
     let container = document.querySelector('.container');
