--- a/examples/scroll-4-examples/iscroll.html
+++ b/examples/scroll-4-examples/iscroll.html
@@ -13,8 +13,8 @@
 
 <body>
 
-  <div class="container">
-    <div class="wrapper">
+  <div class="wrapper">
+    <div class="scroller">
       <div class="list list-0">0</div>
       <div class="list list-1">1</div>
       <div class="list list-2">2</div>
