--- a/examples/scroll-4-examples/iscroll.html
+++ b/examples/scroll-4-examples/iscroll.html
@@ -25,11 +25,18 @@
       <div class="list list-7">7</div>
       <div class="list list-8">8</div>
       <div class="list list-9">9</div>
+      <div class="list list-10">10</div>
+      <div class="list list-11">11</div>
+      <div class="list list-12">12</div>
+      <div class="list list-13">13</div>
+      <div class="list list-14">14</div>
+      <div class="list list-15">15</div>
     </div>
   </div>
 
 
   <button id="scrollHandler">Click to Scroll</button>
+  <button id="scrollToElemetHandler">Scroll to Element</button>
 
   <script src="../../scroller-4-iscroll/dist/iscroll.js"></script>
   <script src="./index.js"></script>
